# Product-Recommender

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml
providers/: async_openai_embedding_provider.py  embedding_provider_langchain.py  openai_embeddings.py
router/: async_product_routes.py  product_routes.py
schemas/: product_schema.py
services/: async_recommend_products.py  explanation.py  recommend_products.py  text_builder.py
services/matching/: async_openai_embedding_matcher.py  base.py  deprecate_embedding_matcher.py  embedding_matcher.py  openai_embedding_matcher.py
utility/: my_embeddings.py
