[project]
name = "product-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "langsmith>=0.7.3",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "redis>=7.2.0",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
